# c_client

./: DEB-README.md  MSI-README.md  README.md  README_WINDOWS.md  README_ja.md  SignUpActivity  client.sln
.github/dockerfile/: Dockerfile-centos7  Dockerfile-opensuse  Dockerfile-rockylinux  Dockerfile-ubuntu
.github/workflows/: codeql-analysis.yml  release.yml
.github/workflows/script/: function.sh
OBS/: debian.changelog  debian.control  debian.rules  griddb-c-client.dsc  griddb-c-client.spec
client/c/: CMakeLists.txt  Makefile.am  bootstrap.sh  client.cpp  client.h  client.vcxproj  client_logging.cpp  client_logging.h  configure.ac  container_key_utils.cpp  container_key_utils.h  geometry_coder.h  gridstore.def
client/c/ext/include/: client_ext.h
client/c/include/: gridstore.h
client/c/include_org/: gridstore.h
client/c/main/: Makefile.am
client/c/mainMacOS/: Makefile.am
client/c/sample/: CMakeLists.txt  client_sample.h  main.c  sample.vcxproj  sample1.c  sample2.c  sample3.c  sample4.c  sample5.c
client/c/sample/src_en/: CMakeLists.txt  sample1.c  sample2.c  sample3.c  sample4.c  sample5.c  sample_en.vcxproj
client/c/sample/src_ja/: CMakeLists.txt  sample1.c  sample2.c  sample3.c  sample4.c  sample5.c  sample_ja.vcxproj
debian/: changelog  control  griddb-c-client.install  griddb-c-client.links  rules
installer/: README.md
installer/SOURCES/: RPM-README.md
installer/SPECS/: griddb.spec
sample/guide/ja/: ArrayData.c  BlobData.c  CompositeKey.c  CompositeKeyMultiGet.c  Connect.c  ContainerInformation.c  ContainerNames.c  CreateCollectionByClass.c  CreateCollectionByMethod.c  CreateIndex.c  CreateTimeSeriesByMethod.c  FetchAll.c  GetRow.c  MultiGet.c  MultiPut.c  NanoTimestamp.c  PutRow.c  PutRows.c  RemoveRowByRowkey.c  RemoveRowByTQL.c  TQLAggregation.c  TQLSelect.c  TQLTimeseries.c  TimeSeriesCompression.c  TimeSeriesRowExpiration.c  UpdateRowByTQL.c  sample1.c  sample2.c  sample3.c  sample4.c  sample5.c
server/: authentication.cpp  authentication.h  bit_array.cpp  bit_array.h  btree_map.h  container_key.cpp  container_key.h  expression.cpp  expression.h  gs_error_common.h  hash_map.h  http.cpp  http.h  json.cpp  json.h  service_address.cpp  service_address.h  socket_wrapper.cpp  socket_wrapper.h  uuid_utils.cpp  uuid_utils.h  value_operator.h
utility/: CMakeLists.txt  utility.vcxproj
utility/util/: allocator.h  code.cpp  code.h  container.cpp  container.h  file.cpp  file.h  net.cpp  net.h  os.cpp  os.h  system.cpp  system.h  thread.cpp  thread.h  time.cpp  time.h  trace.cpp  trace.h  type.cpp  type.h
