SUBDIRS = main

distclean-local:
	rm -rfv autom4te.cache
	rm -fv Makefile.in aclocal.m4 configure depcomp install-sh missing
	rm -fv AUTHORS ChangeLog COPYING INSTALL NEWS README
	rm -fv m4/libtool.m4 m4/lt~obsolete.m4 m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4
	rm -fv config.guess config.sub ltmain.sh
	rmdir -v m4 2> /dev/null || test 1
